src/test/ui/issues/issue-17728.stderr
error[E0623]: lifetime mismatch
  --> $DIR/issue-17728.rs:15:28
   |
LL |     fn attemptTraverse(&self, room: &Room, directionStr: &str) -> Result<&Room, &str> {
   |                                     -----                         -------------------
   |                                     |
   |                                     this parameter and the return type are declared with different lifetimes...
...
LL |             Some(entry) => Ok(entry),
   |                            ^^^^^^^^^ ...but data from `room` is returned here

error[E0308]: match arms have incompatible types
  --> $DIR/issue-17728.rs:109:14
   |
LL | /     match to_parse {
LL | |         "w" | "west" => RoomDirection::West,
LL | |         "e" | "east" => RoomDirection::East,
LL | |         "n" | "north" => RoomDirection::North,
...  |
LL | |         "down" => RoomDirection::Down,
   | |                   ------------------- this and all prior arms are found to be of type `RoomDirection`
LL | |         _ => None
   | |              ^^^^ expected enum `RoomDirection`, found enum `std::option::Option`
LL | |     }
   | |_____- `match` arms have incompatible types
   |
   = note: expected type `RoomDirection`
              found type `std::option::Option<_>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
